--- a/index.ipynb
+++ b/index.ipynb
@@ -168,8 +168,8 @@
     }
    ],
    "source": [
-    "city_indices = range(0,len(cities))\n",
-    "listcity_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+    "city_indices = list(range(0,len(cities))\n",
+    "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
   },
   {
