--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "iterations = 0\n",
-    "for names\n",
+    "for names_and_ranks in \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
