Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,9 @@
    "source": [
     "names_and_ranks = [] \n",
     "iterations = 0\n",
-    "for names_and_ranks in range(0,)\n",
+    "for names_and_ranks in range(0,len(cities)):\n",
+    "    iterations += 1\n",
+    "    print\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
