--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
     "iterations = 0\n",
     "for names_and_ranks in range(0,len(cities)):\n",
     "    iterations += 1\n",
-    "    print (\"City # \", )\n",
+    "    print (\"City # \", + )\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
