--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     "iterations = 0\n",
     "for names_and_ranks in range(0,len(cities)):\n",
     "    iterations += 1\n",
-    "    print (\"City #\", + iterations + \" \" + city_names[iterations-1])\n",
+    "    print (\"City #\", + iterations + \" \" + citi[iterations-1])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
