Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     "iterations = 0\n",
     "for names_and_ranks in range(0,len(cities)):\n",
     "    iterations += 1\n",
-    "    names-and_ranks[iterations-1]\n",
+    "    names-and_ranks[iterations-1] = [city_]\n",
     "    print (\"City #\", + str(iterations) + \" \" + cities[iterations-1]['city_names'])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
