Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,8 +230,8 @@
     "iterations = 0\n",
     "for names_and_ranks in range(0,len(cities)):\n",
     "    iterations += 1\n",
-    "    names-and_ranks[iterations-1] = [iterations, 'city_name]\n",
-    "    print (\"City #\", + str(iterations) + \" \" + cities[iterations-1]['city_names'])\n",
+    "    names-and_ranks[iterations-1] = [iterations, 'city_names']\n",
+    "    print (\"City #\", + names_an + \" \" + cities[iterations-1]['city_names'])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
