Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
     "for names_and_ranks in range(0,len(cities)):\n",
     "    iterations += 1\n",
     "    names-and_ranks[iterations-1] = [iterations, 'city_names']\n",
-    "    print (\"City #\", + names_an + \" \" + cities[iterations-1]['city_names'])\n",
+    "    print (\"City #\", + names_and_ranks[iterations-1][] + \" \" + cities[iterations-1]['city_names'])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
