Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "iterations = 0\n",
     "for names_and_ranks in range(0,len('city_names')):\n",
     "    iterations += 1\n",
-    "    names_and_ranks[iterations] = [str(iterations),'city_names'[iterations]]\n",
+    "    names_and_ranks[iterations-1] = [str(iterations),'city_names'[iterations]]\n",
     "    print(f'City # {iterations}.')\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
