Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,6 +231,14 @@
     "    iterations += 1\n",
     "    names_and_ranks[iterations-1] = [str(iterations),'city_names'[iterations-1]]\n",
     "    print(f'City # {iterations}.')\n",
+    "    \n",
+    "    names_and_ranks = []\n",
+    "for index in city_indices: \n",
+    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
+    "    \n",
+    "names_and_ranks\n",
+    "    \n",
+    "    # make sure the list is empty\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
