Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,24 +210,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-34-45e33c10e690>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-45e33c10e690>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Pyeongchang',\n",
+       " '4. Marakesh',\n",
+       " '5. Albuquerque',\n",
+       " '6. Los Cabos',\n",
+       " '7. Greenville',\n",
+       " '8. Archipelago Sea',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "    names_and_ranks = []\n",
-    "for index in city_indices: \n",
-    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
+    "    for index in city_indices: \n",
+    "        names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
     "    \n",
-    "names_and_ranks\n",
+    "    names_and_ranks\n",
     "    \n",
     "    # make sure the list is empty\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
