Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
    "source": [
     "city_populations = []\n",
     "for index in city_indices:\n",
-    "    city_populations[index]=cities"
+    "    city_populations[index]=cities[index]['Population']"
    ]
   },
   {
