Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,9 @@
    "source": [
     "city_populations = []\n",
     "for index in city_indices:\n",
-    "    city_populations[index]=cities[index]['Population']"
+    "    city_populations[index]=cities[index]['Population']\n",
+    "    \n",
+    "    city_population"
    ]
   },
   {
