--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,7 @@
    "source": [
     "city_populations = []\n",
     "for index in city_indices:\n",
-    "    city_populations[index]=cities[index]['Population']\n",
+    "    city_populations.a=cities[index]['Population']\n",
     "    \n",
     "    city_populations"
    ]
