--- a/index.ipynb
+++ b/index.ipynb
@@ -294,10 +294,15 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for index in city_indices:\n",
+    "for city in cities:\n",
     "    city_populations.append=cities[index]['Population']\n",
     "    \n",
-    "    city_populations"
+    "    city_populations\n",
+    "    \n",
+    "    city_populations = []\n",
+    "for city in cities:\n",
+    "    city_populations.append(city['Population'])\n",
+    "city_populations"
    ]
   },
   {
