--- a/index.ipynb
+++ b/index.ipynb
@@ -293,12 +293,15 @@
     }
    ],
    "source": [
-    "city_populations = []\n",
+    "    city_populations = []\n",
     "for city in cities:\n",
     "    city_populations.append=(city['Population'])\n",
     "    \n",
     "    city_populations\n",
-    "    "
+    "    city_populations = []\n",
+    "for city in cities:\n",
+    "    city_populations.append(city['Population'])\n",
+    "city_populations"
    ]
   },
   {
