Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,20 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(city_populations[0] # 2891000)? (<ipython-input-46-65e660ebff9a>, line 1)",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(city_populations[1] # 2800000)? (<ipython-input-47-af9aae815fad>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-65e660ebff9a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print city_populations[0] # 2891000\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(city_populations[0] # 2891000)?\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-47-af9aae815fad>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print city_populations[1] # 2800000\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(city_populations[1] # 2800000)?\n"
      ]
     }
    ],
    "source": [
-    "print ('city_populations'[0] # 2891000\n",
+    "print ('city_populations')[0] # 2891000\n",
     "print city_populations[1] # 2800000\n",
     "print city_populations[-1] # 0"
    ]
