--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
     }
    ],
    "source": [
-    "print ('city_populations')[0] # 2891000\n",
+    "print ('city_populations'[0] # 2891000\n",
     "print ('city_populations')[1] # 2800000\n",
     "print ('city_populations')[-1] # 0"
    ]
