--- a/index.ipynb
+++ b/index.ipynb
@@ -312,22 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c\n",
-      "i\n",
-      "s\n"
+      "2891000\n",
+      "2800000\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "print (city_populations'[0]) # 2891000\n",
-    "print (city_populations'[1]) # 2800000\n",
+    "print (city_populations[0]) # 2891000\n",
+    "print (city_populations[1]) # 2800000\n",
     "print (city_populations[-1]) # 0"
    ]
   },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
