Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for city in cities:\n",
+    "        city_areas.append(city['Population'])\n",
+    "    \n",
+    "    city_populations"
    ]
   },
   {
