Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -448,15 +448,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<ipython-input-53-f8e78809bfe3>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-f8e78809bfe3>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    city_areas\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "        city_areas.append(city['Population'])\n",
+    "        city_areas.append(city['Area'])\n",
     "    \n",
-    "    city_populations"
+    "    city_areas"
    ]
   },
   {
